--- a/DocInfo.cls
+++ b/DocInfo.cls
@@ -43,7 +43,7 @@ Public publishDate As String '= 11 ' "docentPublishingDate"
 Public ProposedTasks As String '= 12 '"ProposedTasks
 Public PlannedTasks As String '= 13 '"PlannedTasks
 Public ContractNo As String '= 14 '"docentContractNo
-Public MeetingType As String '= 15 '"docentMeetingType"
+Public meetingType As String '= 15 '"docentMeetingType"
 Public Actuals As String '= 16 '"docentMeetingActuals"
 Public MeetingURL As String '= 17 '"docentMeetingURL"
 Public OnlineMeetingURL As String '= 17 '"onlineMeetingURL"
